fixes page scroll so that position of page nav is consistent, and content is visible below the header

--- a/src/assets/scss/components/_project.scss
+++ b/src/assets/scss/components/_project.scss
@@ -12,40 +12,14 @@
 }
 
 .page-anchor {
-  border-top: 1px solid $light-gray;
-  
-  &:first-child {
-    border-top: none;
-  }
-
-  &::before { 
-    content: ""; 
-    margin-top: -3.5em; 
-    height: 3.5em; 
-    visibility: hidden; 
-    pointer-events: none;
-    display: inline-block;
-  }
-
-  & > section:last-child {
-    margin-bottom: 1em !important;
-  }
-
-  @include breakpoint(medium) {
-    &:first-child {
-      margin-top: 0 !important;
-    }
-
-    &::before { 
-      margin-top: -5em; 
-      height: 5em; 
-    }
-  }
+  border-bottom: 1px solid $light-gray;
+  padding-top: 0 !important;
+  margin-bottom: 2em !important;
 }
 
 .project-hero {
   @include breakpoint(medium) {
-    margin-bottom: 1em !important;
+    margin-bottom: 5em !important;
   }
 }
 
@@ -103,9 +77,11 @@
     margin: 0;
     font-size: 1.2em;
     line-height: 1em;
-    font-family: $gotham-narrow;
     font-weight: 700;
-    color: $medium-gray;
+  }
+
+  a:link, a:visited {
+    font-weight: 400;
   }
 
   a:active, a:hover {
@@ -114,7 +90,7 @@
 
   @include breakpoint(medium) {
     padding: 1.5em;
-    margin-top: 3em;
+    // margin-top: 3em;
 
     h2 {
       padding: 0;
